--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
        <title>Сайт Алёны для практики</title>
 
 	    	    
-
+<script type="text/javascript" async src="https://app.uiscom.ru/static/cs.min.js?k=C88gETV7L9Mvls2vCtzURhqKk_L7ylrt"></script>
     </head>
 
     <body>
